// Vitest Snapshot v1

exports[`Component: Card > ui > basic > Component: Card => ui => basic 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header card-header"
    >
      A simple header
    </div>
    <div
      class="card-body card-body"
    >
      <fieldset
        class="radio-group  mb-3"
      >
        <legend>
          Environment
        </legend>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="local"
              type="radio"
              value="local"
            />
             
            local
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="development"
              type="radio"
              value="development"
            />
             
            development
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="test"
              type="radio"
              value="test"
            />
             
            test
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="acceptation"
              type="radio"
              value="acceptation"
            />
             
            acceptation
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="production"
              type="radio"
              value="production"
            />
             
            production
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="card-footer card-footer"
    >
      A simple footer
    </div>
  </div>
</div>
`;

exports[`Component: Card > ui > without footer 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header card-header"
    >
      A simple header
    </div>
    <div
      class="card-body card-body"
    >
      <fieldset
        class="radio-group  mb-3"
      >
        <legend>
          Environment
        </legend>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="local"
              type="radio"
              value="local"
            />
             
            local
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="development"
              type="radio"
              value="development"
            />
             
            development
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="test"
              type="radio"
              value="test"
            />
             
            test
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="acceptation"
              type="radio"
              value="acceptation"
            />
             
            acceptation
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="production"
              type="radio"
              value="production"
            />
             
            production
          </label>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Component: Card > ui > without header 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-body card-body"
    >
      <fieldset
        class="radio-group  mb-3"
      >
        <legend>
          Environment
        </legend>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="local"
              type="radio"
              value="local"
            />
             
            local
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="development"
              type="radio"
              value="development"
            />
             
            development
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="test"
              type="radio"
              value="test"
            />
             
            test
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="acceptation"
              type="radio"
              value="acceptation"
            />
             
            acceptation
          </label>
        </div>
        <div
          class="form-check"
        >
          <label
            class="form-check-label"
          >
            <input
              class="form-check-input"
              defaultvalue="production"
              type="radio"
              value="production"
            />
             
            production
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="card-footer card-footer"
    >
      A simple footer
    </div>
  </div>
</div>
`;
